# ptm

./: CLAUDE.md  README.md  ptm.py  pyproject.toml
tests/: test_cli.py
