[project]
name = "ptm"
version = "0.1.0"
description = "Python Text Manipulator: a tiny Unix-style stdin/stdout filter."
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Tubbles" }]

[project.scripts]
ptm = "ptm:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["ptm.py"]

[tool.hatch.build.targets.sdist]
include = ["ptm.py", "README.md", "tests"]

[tool.pytest.ini_options]
addopts = "--doctest-modules -ra"
testpaths = ["ptm.py", "tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
